--- a/css files/bestsellers.css
+++ b/css files/bestsellers.css
@@ -1,6 +1,6 @@
 .bestsellers-section{
     height: 800px;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(22, 22, 22);
     margin-top: -5px; 
     display: flex;
